--- a/staging/certmananger.yaml
+++ b/staging/certmananger.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: cert-manager
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -17,7 +12,7 @@ spec:
     path: apps/certmanager
   destination: 
     server: https://kubernetes.default.svc
-    namespace: certmanager
+    namespace: argocd
 
   syncPolicy:
     syncOptions:
