--- a/apps/sealedsecret/sealedsecret.yaml
+++ b/apps/sealedsecret/sealedsecret.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: certmanager-app
-  namespace: certmanager
+  name: sealedsecret-app
+  namespace: sealedsecret
 spec:
   project: default
 
