--- a/apps/certmanager/certmanager.yaml
+++ b/apps/certmanager/certmanager.yaml
@@ -12,8 +12,8 @@ spec:
     targetRevision: v1.14.2
     helm:
       parameters:
-        - name: installCRDs
-          value: "true"
+        - name: "installCRDs"
+          value: true
 
   destination: 
     server: https://kubernetes.default.svc
