--- a/apps/certmanager/certmanager.yaml
+++ b/apps/certmanager/certmanager.yaml
@@ -13,7 +13,7 @@ spec:
     helm:
       parameters:
         - name: "installCRDs"
-          value: True
+          value: "true"
 
   destination: 
     server: https://kubernetes.default.svc
