--- a/apps/certmanager/certmanager.yaml
+++ b/apps/certmanager/certmanager.yaml
@@ -12,7 +12,7 @@ spec:
     targetRevision: v1.14.2
     helm:
       parameters:
-        - name: "installCRDs"
+        - name: installCRDs
           value: "true"
 
   destination: 
