--- a/apps/certmanager/certmanager.yaml
+++ b/apps/certmanager/certmanager.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: certmanager-app
-  namespace: certmanager
+  namespace: argocd
 spec:
   project: default
 
