UPdated sealed secrets

--- a/apps/sealedsecret/sealedsecret.yaml
+++ b/apps/sealedsecret/sealedsecret.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://bitnami-labs.github.io
+    repoURL: https://bitnami-labs.github.io/sealed-secrets
     chart: sealed-secrets
     targetRevision: v2.14.2
     helm:
