--- a/staging/sealedsecret.yaml
+++ b/staging/sealedsecret.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sealedsecret-app-clone
+  name: sealedsecret-setup
   namespace: argocd
 spec:
   project: clone
