--- a/apps/sealedsecret/sealedsecret.yaml
+++ b/apps/sealedsecret/sealedsecret.yaml
@@ -17,7 +17,7 @@ spec:
 
   destination: 
     server: https://kubernetes.default.svc
-    namespace: certmanager
+    namespace: sealedsecret
 
   syncPolicy:
     syncOptions:
