--- a/staging/secrets/cloudflare.yaml
+++ b/staging/secrets/cloudflare.yaml
@@ -12,5 +12,5 @@ spec:
     metadata:
       creationTimestamp: null
       name: cloudflare-api-token-secret
-      namespace: argocd
+      namespace: certmanager
     type: Opaque
