--- a/apps/certmanager/acme-issuer.yaml
+++ b/apps/certmanager/acme-issuer.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   acme:
     email: siva.radium@gmail.com
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    # server: https://acme-v02.api.letsencrypt.org/directory
+    # server: https://acme-staging-v02.api.letsencrypt.org/directory
+    server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: acme-issuer-account-key
     solvers:
