--- a/apps/certmanager/acme-issuer.yaml
+++ b/apps/certmanager/acme-issuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: acme-issuer
+  name: acme-issuer-prod
 spec:
   acme:
     email: siva.radium@gmail.com
