Added terraform agent

--- a/staging/kustomization.yaml
+++ b/staging/kustomization.yaml
@@ -2,6 +2,8 @@ resources:
   - argocd.yaml
   - certmananger.yaml
   - sealedsecret.yaml
+  - terraform.yaml
 
   # Secrets
   - secrets/cloudflare.yaml
+  - secrets/terraform.yaml
