--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -33,9 +33,9 @@ spec:
             requests:
               memory: 128Mi
               cpu: 200m
-          envFrom:
-            - secretRef:
-              name: homepage-secret
+          # envFrom:
+          #   - secretRef:
+          #     name: homepage-secret
           ports:
             - containerPort: 3000
               name: http
