UPdated path in ingress

--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -47,9 +47,7 @@ spec:
     - host: "homepage.k3s.tsphotoclicks.net"
       http:
         paths:
-          - path: "/"
-            pathType: Prefix
-            backend:
+          - backend:
               service:
                 name: homepage
                 port:
