--- a/apps/homepage/service.yaml
+++ b/apps/homepage/service.yaml
@@ -9,9 +9,9 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - port: 3000
-      targetPort: http
+    - name: http
+      port: 3000
       protocol: TCP
-      name: http
+      targetPort: http
   selector:
     app.kubernetes.io/name: homepage
