--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -5,15 +5,29 @@ metadata:
   namespace: homepage
   annotations:
     gethomepage.dev/href: "https://homepage.k3s.tsphotoclicks.net"
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/description: Media Server
+    gethomepage.dev/group: Media
+    gethomepage.dev/icon: emby.png
+    gethomepage.dev/name: Homepage
+    gethomepage.dev/widget.type: "emby"
+    gethomepage.dev/widget.url: "https://homepage.k3s.tsphotoclicks.net"
+    gethomepage.dev/pod-selector: ""
+    gethomepage.dev/weight: 10 # optional
+    gethomepage.dev/instance: "public" # optional
 spec:
   entryPoints:
     - websecure
   routes:
     - kind: Rule
       match: Host(`homepage.k3s.tsphotoclicks.net`)
-      priority: 10
       services:
-        - name: homepage
-          port: http
+        - kind: Service
+          name: homepage
+          namespace: homepage
+          port: 8080
+          scheme: http
+          strategy: RoundRobin
+          weight: 10
   tls:
     secretName: default
