--- a/apps/homepage/kustomization.yaml
+++ b/apps/homepage/kustomization.yaml
@@ -1,5 +1,7 @@
 resources:
+  - clusterrole.yaml
+  - configmap.yaml
   - deployment.yaml
-  - config.yaml
   - ingress.yaml
+  - secret.yaml
   - service.yaml
