--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -1,89 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: homepage
-  namespace: homepage
-  labels:
-    app: homepage
-  annotations:
-    reloader.stakater.com/auto: "true"
+    name: homepage
+    namespace: homepage
+    labels:
+        app.kubernetes.io/name: homepage
 spec:
-  selector:
-    matchLabels:
-      app: homepage
-  replicas: 3
-  progressDeadlineSeconds: 600
-  revisionHistoryLimit: 1
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 25%
-      maxSurge: 1
-  template:
-    metadata:
-      labels:
-        app: homepage
-      annotations:
-        deploy-date: "deploy-date-value"
-    spec:
-      containers:
-        - name: homepage
-          image: ghcr.io/gethomepage/homepage:latest
-          resources:
-            requests:
-              memory: 128Mi
-              cpu: 200m
-          # envFrom:
-          #   - secretRef:
-          #     name: homepage-secret
-          ports:
-            - containerPort: 3000
-              name: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 60
-            periodSeconds: 10
-            failureThreshold: 5
-            timeoutSeconds: 5
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            timeoutSeconds: 5
-          volumeMounts:
-            - mountPath: /app/config/custom.js
-              name: homepage-config
-              subPath: custom.js
-            - mountPath: /app/config/custom.css
-              name: homepage-config
-              subPath: custom.css
-            - mountPath: /app/config/bookmarks.yaml
-              name: homepage-config
-              subPath: bookmarks.yaml
-            - mountPath: /app/config/docker.yaml
-              name: homepage-config
-              subPath: docker.yaml
-            - mountPath: /app/config/kubernetes.yaml
-              name: homepage-config
-              subPath: kubernetes.yaml
-            - mountPath: /app/config/services.yaml
-              name: homepage-config
-              subPath: services.yaml
-            - mountPath: /app/config/settings.yaml
-              name: homepage-config
-              subPath: settings.yaml
-            - mountPath: /app/config/widgets.yaml
-              name: homepage-config
-              subPath: widgets.yaml
-            - mountPath: /app/config/logs
-              name: logs
-      volumes:
-        - name: homepage-config
-          configMap:
-            name: homepage
-        - name: logs
-          emptyDir: {}
+    revisionHistoryLimit: 3
+    replicas: 1
+    strategy:
+        type: RollingUpdate
+    selector:
+        matchLabels:
+            app.kubernetes.io/name: homepage
+    template:
+        metadata:
+            labels:
+                app.kubernetes.io/name: homepage
+        spec:
+            serviceAccountName: homepage
+            automountServiceAccountToken: true
+            dnsPolicy: ClusterFirst
+            enableServiceLinks: true
+            containers:
+                - name: homepage
+                  image: "ghcr.io/benphelps/homepage:latest"
+                  imagePullPolicy: Always
+                  ports:
+                      - name: http
+                        containerPort: 3000
+                        protocol: TCP
+                  volumeMounts:
+                      - name: homepage-config
+                        mountPath: /app/config
+                      - name: logs
+                        mountPath: /app/config/logs
+            volumes:
+                - name: homepage-config
+                  configMap:
+                      name: homepage
+                - name: logs
+                  emptyDir: {}
