--- a/apps/homepage/service.yaml
+++ b/apps/homepage/service.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: homepage
-  namespace: homepage
-  labels:
-    app.kubernetes.io/name: homepage
-  annotations:
+    name: homepage
+    namespace: homepage
+    labels:
+        app.kubernetes.io/name: homepage
+    annotations:
 spec:
-  type: ClusterIP
-  ports:
-    - name: http
-      port: 3000
-      protocol: TCP
-      targetPort: http
-  selector:
-    app.kubernetes.io/name: homepage
+    type: ClusterIP
+    ports:
+        - port: 3000
+          targetPort: http
+          protocol: TCP
+          name: http
+    selector:
+        app.kubernetes.io/name: homepage
