--- a/staging/kustomization.yaml
+++ b/staging/kustomization.yaml
@@ -3,7 +3,7 @@ resources:
   - certmananger.yaml
   - sealedsecret.yaml
   # - terraform.yaml
-  - homepage.yaml
+  # - homepage.yaml
 
   # Secrets
   - secrets/cloudflare.yaml
