--- a/apps/nginx/ingress.yaml
+++ b/apps/nginx/ingress.yaml
@@ -6,7 +6,8 @@ metadata:
     kubernetes.io/ingress.class: "traefik"
 spec:
   rules:
-  - http:
+  - host: "nginx.k3s.tsphotoclicks.net"
+    http:
       paths:
       - path: /
         pathType: Prefix
