--- a/apps/nginx/ingress.yaml
+++ b/apps/nginx/ingress.yaml
@@ -1,18 +1,58 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
 metadata:
-  name: hello-world
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
+  name: https-redirect
 spec:
-  rules:
-  - host: "nginx.k3s.tsphotoclicks.net"
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: hello-world
-            port:
-              number: 80
+  redirectScheme:
+    scheme: https
+    permanent: true
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: http-redirect-ingressroute
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`nginx.k3s.tsphotoclicks.net`)
+      kind: Rule
+      services:
+        - name: hello-world
+          port: 80
+      middlewares:
+        - name: https-redirect
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: https-ingressroute
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`nginx.k3s.tsphotoclicks.net`)
+      kind: Rule
+      services:
+        - name: hello-world
+          port: 80
+  tls: default
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: hello-world
+#   annotations:
+#     kubernetes.io/ingress.class: "traefik"
+# spec:
+#   rules:
+#   - host: "nginx.k3s.tsphotoclicks.net"
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: hello-world
+#             port:
+#               number: 80
