--- a/apps/nginx/ingress.yaml
+++ b/apps/nginx/ingress.yaml
@@ -36,7 +36,8 @@ spec:
       services:
         - name: hello-world
           port: 80
-  tls: default
+  tls:
+    secretName: default
 # ---
 # apiVersion: networking.k8s.io/v1
 # kind: Ingress
