--- a/apps/argocd/ingress.yaml
+++ b/apps/argocd/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.io/v1alpha1
+apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: mw-argocd
@@ -8,7 +8,7 @@ spec:
     scheme: https
     permanent: true
 ---
-apiVersion: traefik.io/v1alpha1
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: http-argocd
