--- a/apps/argocd/ingress.yaml
+++ b/apps/argocd/ingress.yaml
@@ -1,14 +1,4 @@
 apiVersion: traefik.containo.us/v1alpha1
-kind: Middleware
-metadata:
-  name: mw-argocd
-  namespace: argocd
-spec:
-  redirectScheme:
-    scheme: https
-    permanent: true
----
-apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: http-argocd
@@ -17,7 +7,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`argocd.k3s.tsphotoclicks.net`) || (Host(`argocd.k3s.tsphotoclicks.net`) && Path(`/`))
+    - match: Host(`argocd.k3s.tsphotoclicks.net`)
       kind: Rule
       services:
         - name: argocd-server
