--- a/apps/nginx/ingress.yaml
+++ b/apps/nginx/ingress.yaml
@@ -52,12 +52,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: https-nginx
+  name: hello-world
   # namespace: resume
   annotations:
-    kubernetes.io/ingress.class: "traefik"
+    kubernetes.io/ingress.class: traefik
     # cert-manager.io/cluster-issuer: letsencrypt-staging
-    traefik.ingress.kubernetes.io/router.middlewares: certmanager-redirect-https@kubernetescrd
+    # traefik.ingress.kubernetes.io/router.middlewares: certmanager-redirect-https@kubernetescrd
 spec:
   rules:
   - host: nginx.k3s.tsphotoclicks.net
