--- a/apps/argocd/ingress.yaml
+++ b/apps/argocd/ingress.yaml
@@ -14,6 +14,7 @@ spec:
           port: 80
       middlewares:
         - name: https-redirect
+          namespace: certmanager
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
