--- a/apps/nginx/ingress.yaml
+++ b/apps/nginx/ingress.yaml
@@ -1,19 +1,32 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
-  name: hello-world
-  annotations:
-    kubernetes.io/ingress.class: "traefik"
-    traefik.ingress.kubernetes.io/router.middlewares: certmanager-redirect-https@kubernetescrd
+  name: http-hello-world
 spec:
-  rules:
-  - host: "nginx.k3s.tsphotoclicks.net"
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: hello-world
-            port:
-              number: 80
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`nginx.k3s.tsphotoclicks.net`)
+      kind: Rule
+      services:
+        - name: hello-world
+          port: 80
+      middlewares:
+        - name: redirect-https
+          namespace: certmanager
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: https-hello-world
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`nginx.k3s.tsphotoclicks.net`)
+      kind: Rule
+      services:
+        - name: hello-world
+          port: 80
+  tls:
+    secretName: default
