--- a/apps/argocd/ingress.yaml
+++ b/apps/argocd/ingress.yaml
@@ -1,4 +1,14 @@
 apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: redirect-argocd
+  namespace: argocd
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
+---
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: http-argocd
@@ -13,8 +23,7 @@ spec:
         - name: argocd-server
           port: 80
       middlewares:
-        - name: redirect-https
-          namespace: certmanager
+        - name: redirect-argocd
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
