Updated nameapce in ingress

--- a/apps/argocd/ingress.yaml
+++ b/apps/argocd/ingress.yaml
@@ -24,6 +24,7 @@ spec:
           port: 80
       middlewares:
         - name: redirect-argocd
+          namespace: argocd
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
