Updated basic configuration for homepage

--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -1,37 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: homepage
-    namespace: homepage
-    labels:
-        app.kubernetes.io/name: homepage
+  name: homepage
+  namespace: homepage
+  labels:
+    app.kubernetes.io/name: homepage
 spec:
-    revisionHistoryLimit: 3
-    replicas: 1
-    strategy:
-        type: RollingUpdate
-    template:
-        spec:
-            serviceAccountName: homepage
-            automountServiceAccountToken: true
-            dnsPolicy: ClusterFirst
-            enableServiceLinks: true
-            containers:
-                - name: homepage
-                  image: "ghcr.io/benphelps/homepage:latest"
-                  imagePullPolicy: Always
-                  ports:
-                      - name: http
-                        containerPort: 3000
-                        protocol: TCP
-                  volumeMounts:
-                      - name: homepage-config
-                        mountPath: /app/config
-                      - name: logs
-                        mountPath: /app/config/logs
-            volumes:
-                - name: homepage-config
-                  configMap:
-                      name: homepage
-                - name: logs
-                  emptyDir: {}
+  selector:
+    matchLabels:
+      app: homepage
+  replicas: 3
+  template:
+    metadata:
+      labels:
+        app: homepage
+    spec:
+      containers:
+      - name: homepage
+        image: "ghcr.io/benphelps/homepage:latest"
+        ports:
+        - containerPort: 3000
