--- a/apps/homepage/ingress.yaml
+++ b/apps/homepage/ingress.yaml
@@ -1,26 +1,44 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
 metadata:
-    name: homepage
-    namespace: homepage
-    labels:
-        app.kubernetes.io/name: homepage
-    annotations:
-        gethomepage.dev/description: Dynamically Detected Homepage
-        gethomepage.dev/enabled: "true"
-        gethomepage.dev/group: Cluster Management
-        gethomepage.dev/icon: homepage.png
-        gethomepage.dev/name: Homepage
-        kubernetes.io/ingress.class: traefik
+  name: redirect-homepage
+  namespace: homepage
 spec:
-    rules:
-        - host: "homepage.k3s.tsphotoclicks.net"
-          http:
-              paths:
-                  - path: "/"
-                    pathType: Prefix
-                    backend:
-                        service:
-                            name: homepage
-                            port:
-                                number: 3000
+  redirectScheme:
+    scheme: https
+    permanent: true
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: http-homepage
+  namespace: homepage
+spec:
+  entryPoints:
+    - web
+  routes:
+    - match: Host(`homepage.k3s.tsphotoclicks.net`)
+      kind: Rule
+      services:
+        - name: homepage
+          port: 3000
+      middlewares:
+        - name: redirect-homepage
+          namespace: homepage
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: https-homepage
+  namespace: homepage
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`homepage.k3s.tsphotoclicks.net`)
+      kind: Rule
+      services:
+        - name: homepage
+          port: 3000
+  tls:
+    secretName: default
