--- a/apps/homepage/service.yaml
+++ b/apps/homepage/service.yaml
@@ -1,17 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: homepage
-    namespace: homepage
-    labels:
-        app.kubernetes.io/name: homepage
-    annotations:
+  name: homepage
+  namespace: homepage
 spec:
-    type: ClusterIP
-    ports:
-        - port: 3000
-          targetPort: http
-          protocol: TCP
-          name: http
-    selector:
-        app.kubernetes.io/name: homepage
+  ports:
+    - port: 3000
+      protocol: TCP
+  selector:
+    app: homepage
