Updated to latest image

--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: homepage
-          image: ghcr.io/gethomepage/homepage:v0.8.4
+          image: ghcr.io/gethomepage/homepage:latest
           resources:
             requests:
               memory: 128Mi
