--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -9,17 +9,14 @@ data:
   kubernetes.yaml: |
     mode: cluster
   settings.yaml: |
-    title: Techno Tim Homepage
+    title: TS Photoclicks Homepage
 
     background:
       image: https://cdnb.artstation.com/p/assets/images/images/006/897/659/large/mikael-gustafsson-wallpaper-mikael-gustafsson.jpg
-      blur: sm # sm, md, xl... see https://tailwindcss.com/docs/backdrop-blur
-      saturate: 100 # 0, 50, 100... see https://tailwindcss.com/docs/backdrop-saturate
-      brightness: 50 # 0, 50, 75... see https://tailwindcss.com/docs/backdrop-brightness
-      opacity: 100 # 0-100
-
-    theme: dark
-    color: slate
+      blur: sm
+      saturate: 100
+      brightness: 50
+      opacity: 100
 
     useEqualHeights: true
 
