Updated background image

--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -12,7 +12,7 @@ data:
     title: TS Photoclicks Homepage
 
     background:
-      image: https://bing.com/th?id=OHR.BackyardBird_EN-US8255123787_1920x1080.jpg&rf=LaDigue_1920x1080.jpg
+      image: https://www.hdwallpapers.in/download/space_universe_galaxy_stars_sky_4k_5k_hd_galaxy-HD.jpg
       blur: sm
 
     theme: dark
