--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -12,7 +12,7 @@ data:
     title: TS Photoclicks Homepage
 
     background:
-      image: https://www.hdwallpapers.in/download/space_universe_galaxy_stars_sky_4k_5k_hd_galaxy-HD.jpg
+      image: https://cdnb.artstation.com/p/assets/images/images/051/102/907/large/gioele-muscolino-artstation-post-2.jpg?1656458075
       blur: sm
 
     theme: dark
