Updated background image

--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -12,7 +12,7 @@ data:
     title: TS Photoclicks Homepage
 
     background:
-      image: https://cdnb.artstation.com/p/assets/images/images/051/102/907/large/gioele-muscolino-artstation-post-2.jpg?1656458075
+      image: https://cdna.artstation.com/p/assets/images/images/051/102/990/large/gioele-muscolino-artstation-post-8.jpg?1656458283
       blur: sm
 
     theme: dark
