--- a/apps/reloader/reloader.yaml
+++ b/apps/reloader/reloader.yaml
@@ -9,6 +9,7 @@ spec:
   source:
     repoURL: https://stakater.github.io/stakater-charts
     chart: reloader
+    targetRevision: HEAD
 
   destination: 
     server: https://kubernetes.default.svc
