--- a/apps/reloader/reloader.yaml
+++ b/apps/reloader/reloader.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://stakater.github.io/stakater-charts
     chart: reloader
-    targetRevision: HEAD
+    targetRevision: v1.0.67
 
   destination: 
     server: https://kubernetes.default.svc
