--- a/staging/sealedsecret.yaml
+++ b/staging/sealedsecret.yaml
@@ -1,20 +1,28 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sealedsecret-setup
+  name: sealedsecret-app
   namespace: argocd
 spec:
-  project: clone
+  project: default
+
   source:
-    repoURL: https://github.com/torchilidae/k3s-argocd.git
-    targetRevision: main
-    path: apps/sealedsecret
+    repoURL: https://bitnami-labs.github.io/sealed-secrets
+    chart: sealed-secrets
+    targetRevision: v2.14.2
+    helm:
+      parameters:
+        - name: installCRDs
+          value: "true"
+
   destination: 
     server: https://kubernetes.default.svc
     namespace: sealedsecret
+
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+
     automated:
       selfHeal: true
       prune: true
