--- a/staging/certmananger.yaml
+++ b/staging/certmananger.yaml
@@ -1,20 +1,46 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: certmanager-setup
+  name: certmanager-app
   namespace: argocd
 spec:
-  project: clone
+  project: default
+
   source:
-    repoURL: https://github.com/torchilidae/k3s-argocd.git
-    targetRevision: main
-    path: apps/certmanager
+    repoURL: https://charts.jetstack.io
+    chart: cert-manager
+    targetRevision: v1.14.2
+    helm:
+      parameters:
+        - name: installCRDs
+          value: "true"
+
   destination: 
     server: https://kubernetes.default.svc
     namespace: certmanager
+
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+
     automated:
       selfHeal: true
       prune: true
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: acme-issuer
+spec:
+  acme:
+    email: siva.radium@gmail.com
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: acme-issuer-account-key
+    solvers:
+    - dns01:
+        cloudflare:
+          email: siva.radium@gmail.com
+          apiTokenSecretRef:
+            name: cloudflare-api-token-secret
+            key: api-token
