--- a/staging/homepage.yaml
+++ b/staging/homepage.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: homepage-setup
+  name: homepage-app
   namespace: argocd
 spec:
   project: clone
