--- a/staging/nginx.yaml
+++ b/staging/nginx.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-setup
+  name: nginx-app
   namespace: argocd
 spec:
   project: clone
