--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -18,6 +18,8 @@ data:
     theme: dark
     color: slate
 
+    useEqualHeights: true
+
     layout:
       Hypervisor:
         header: true
@@ -32,18 +34,22 @@ data:
   bookmarks.yaml: ""
   services.yaml: |
     - Hypervisor:
-        - Proxmox:
+        - Proxmox-1:
             icon: proxmox.svg
             href: "https://pve1.tsphotoclicks.net:8006"
             description: pve1
+        - Proxmox-2:
+            icon: proxmox.svg
+            href: "https://pve2.tsphotoclicks.net:8006"
+            description: pve2
+        - Proxmox-3:
+            icon: proxmox.svg
+            href: "https://pve3.tsphotoclicks.net:8006"
+            description: pve3
     - Other:
         - GitLab:
             icon: gitlab.svg
             href: https://gitlab.com
-            description: source code
-        - GitHub:
-            icon: github.svg
-            href: https://github.com
             description: source code
   widgets.yaml: |
     - resources:
