--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -12,7 +12,7 @@ data:
     title: TS Photoclicks Homepage
 
     background:
-      image: /images/background.jpg
+      image: https://cdna.artstation.com/p/assets/images/images/051/102/990/large/gioele-muscolino-artstation-post-8.jpg
 
     theme: dark
     color: slate
