Updated secrete environemtn update

--- a/apps/homepage/deployment.yaml
+++ b/apps/homepage/deployment.yaml
@@ -31,7 +31,7 @@ spec:
               memory: 128Mi
               cpu: 200m
           envFrom:
-            - secretRef:
+            secretRef:
               name: homepage-secret
           ports:
             - containerPort: 3000
