Updated proxmox permissions

--- a/apps/homepage/config.yaml
+++ b/apps/homepage/config.yaml
@@ -37,14 +37,32 @@ data:
             icon: proxmox.svg
             href: "{{HOMEPAGE_VAR_PROXMOX_1_URL}}"
             description: pve1
+            widget:
+                type: proxmox
+                url: "{{HOMEPAGE_VAR_PROXMOX_1_URL}}"
+                username: "{{HOMEPAGE_VAR_PROXMOX_USER}}"
+                password: "{{HOMEPAGE_VAR_PROXMOX_API_KEY}}"
+                node: pve1
         - Proxmox-2:
             icon: proxmox.svg
             href: "{{HOMEPAGE_VAR_PROXMOX_2_URL}}"
             description: pve2
+            widget:
+                type: proxmox
+                url: "{{HOMEPAGE_VAR_PROXMOX_2_URL}}"
+                username: "{{HOMEPAGE_VAR_PROXMOX_USER}}"
+                password: "{{HOMEPAGE_VAR_PROXMOX_API_KEY}}"
+                node: pve2
         - Proxmox-3:
             icon: proxmox.svg
             href: "{{HOMEPAGE_VAR_PROXMOX_3_URL}}"
             description: pve3
+            widget:
+                type: proxmox
+                url: "{{HOMEPAGE_VAR_PROXMOX_3_URL}}"
+                username: "{{HOMEPAGE_VAR_PROXMOX_USER}}"
+                password: "{{HOMEPAGE_VAR_PROXMOX_API_KEY}}"
+                node: pve3
     - Other:
         - GitLab:
             icon: gitlab.svg
