Updated app paths

--- a/security/sealedsecret.yaml
+++ b/security/sealedsecret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sealedsecret-app
   namespace: argocd
 spec:
-  project: default
+  project: security
 
   source:
     repoURL: https://bitnami-labs.github.io/sealed-secrets
@@ -17,7 +17,7 @@ spec:
 
   destination: 
     server: https://kubernetes.default.svc
-    namespace: security
+    namespace: sealedsecret
 
   syncPolicy:
     syncOptions:
