--- a/network/certmananger.yaml
+++ b/network/certmananger.yaml
@@ -17,7 +17,7 @@ spec:
 
   destination: 
     server: https://kubernetes.default.svc
-    namespace: network
+    namespace: certmanager
 
   syncPolicy:
     syncOptions:
