--- a/apps/argocd/app.yaml
+++ b/apps/argocd/app.yaml
@@ -4,17 +4,19 @@ metadata:
   name: argocd-app
   namespace: argocd
 spec:
-  project: default
+  project: apps
   source:
     repoURL: https://github.com/torchilidae/k3s-argocd.git
     targetRevision: main
-    path: apps/argocd
+
   destination: 
     server: https://kubernetes.default.svc
     namespace: argocd
+
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+
     automated:
       selfHeal: true
       prune: true
