--- a/apps/argocd/ingress.yaml
+++ b/apps/argocd/ingress.yaml
@@ -17,7 +17,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`argocd.k3s.tsphotoclicks.net`)
+    - match: Host(`argocd.ltc.tsphotoclicks.net`)
       kind: Rule
       services:
         - name: argocd-server
@@ -36,13 +36,13 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`argocd.k3s.tsphotoclicks.net`)
+      match: Host(`argocd.ltc.tsphotoclicks.net`)
       priority: 10
       services:
         - name: argocd-server
           port: 80
     - kind: Rule
-      match: Host(`argocd.k3s.tsphotoclicks.net`) && Headers(`Content-Type`, `application/grpc`)
+      match: Host(`argocd.ltc.tsphotoclicks.net`) && Headers(`Content-Type`, `application/grpc`)
       priority: 11
       services:
         - name: argocd-server
