--- a/network/certmananger.yaml
+++ b/network/certmananger.yaml
@@ -37,6 +37,7 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: acme-issuer-account-key
+      key: api-token
     solvers:
     - dns01:
         cloudflare:
