--- a/network/certmananger.yaml
+++ b/network/certmananger.yaml
@@ -44,3 +44,4 @@ spec:
           email: siva.radium@gmail.com
           apiTokenSecretRef:
             name: cloudflare-api-token-secret
+            key: api-token
