corrected source in yaml file

--- a/storage/longhorn/app.yaml
+++ b/storage/longhorn/app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: storage
 
-  sources:
+  source:
     repoURL: https://charts.longhorn.io/
     chart: longhorn
     targetRevision: v1.8.1
