--- a/network/certmananger/app.yaml
+++ b/network/certmananger/app.yaml
@@ -4,16 +4,20 @@ metadata:
   name: certmanager-app
   namespace: argocd
 spec:
-  project: default
+  project: network
 
   source:
-    repoURL: https://charts.jetstack.io
-    chart: cert-manager
-    targetRevision: v1.14.2
+    repoURL: https://argoproj.github.io/argo-helm
+    chart: charts/argo-cd
     helm:
       parameters:
         - name: installCRDs
           value: "true"
+    valuesObject:
+      argo-cd:
+          server:
+            extraArgs:
+              - --insecure
 
   destination: 
     server: https://kubernetes.default.svc
