--- a/network/certmananger/app.yaml
+++ b/network/certmananger/app.yaml
@@ -7,17 +7,13 @@ spec:
   project: network
 
   source:
-    repoURL: https://argoproj.github.io/argo-helm
-    chart: charts/argo-cd
+    repoURL: https://charts.jetstack.io
+    chart: cert-manager
+    targetRevision: v1.17.2
     helm:
       parameters:
         - name: installCRDs
           value: "true"
-    valuesObject:
-      argo-cd:
-          server:
-            extraArgs:
-              - --insecure
 
   destination: 
     server: https://kubernetes.default.svc
