--- a/app-setup.yaml
+++ b/app-setup.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: storage
+  name: monitor
 spec:
   destination:
     namespace: ''
     server: https://kubernetes.default.svc
   source:
-    path: storage
+    path: monitor
     repoURL: git@github.com:torchilidae/k3s-argocd.git
     targetRevision: HEAD
   sources: []
-  project: storage
+  project: monitor
   syncPolicy:
     automated:
       prune: true
