--- a/monitor/uptimekuma/app.yaml
+++ b/monitor/uptimekuma/app.yaml
@@ -13,7 +13,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: monitor
+    namespace: uptimekuma
 
   syncPolicy:
     syncOptions:
