updated volume data

--- a/monitor/uptimekuma/deployment.yaml
+++ b/monitor/uptimekuma/deployment.yaml
@@ -8,6 +8,12 @@ spec:
   selector:
     matchLabels:
       app: uptimekuma
+  replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   template:
     metadata:
       labels:
@@ -18,3 +24,30 @@ spec:
         image: elestio/uptime-kuma:1.23.15
         ports:
         - containerPort: 3001
+          name: uptimekuma-ui
+        resources:
+          limits:
+            cpu: 200m
+            memory: 512Mi
+          requests:
+            cpu: 50m
+            memory: 128Mi
+        livenessProbe:
+          tcpSocket:
+            port: uptimekuma-ui
+          initialDelaySeconds: 60
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: uptimekuma-ui
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        volumeMounts:
+        - name: data
+          mountPath: /app/data
+      volumes:
+      - name: data
+        persistentVolumeClaim:
+          claimName: uptimekuma-pvc
