--- a/monitor/uptimekuma/volumes.yaml
+++ b/monitor/uptimekuma/volumes.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: uptimekuma-pvc
+  namespace: uptimekuma
 spec:
   accessModes:
     - ReadWriteOnce
